Refactor login, product detail, profile, and register pages; remove demo login info, enhance footer with social links, and update contact details. Add order success and failure pages with corresponding JavaScript for dynamic content handling and error display.

--- a/login.html
+++ b/login.html
@@ -139,28 +139,6 @@
                 <a href="#" class="forgot-password">Parolunu unutmusan?</a>
               </div>
 
-              <!-- Demo Login Info -->
-              <div class="demo-login-info">
-                <h4>Demo Giriş Bilgiləri:</h4>
-                <div class="demo-accounts">
-                  <div class="demo-account">
-                    <strong>Email:</strong> demo@depod.az<br />
-                    <strong>Parol:</strong> 123456<br />
-                    <small>(Onaylanmış tələbə statusu)</small>
-                  </div>
-                  <div class="demo-account">
-                    <strong>Telefon:</strong> +994501234567<br />
-                    <strong>Parol:</strong> 123456<br />
-                    <small>(Eyni hesab)</small>
-                  </div>
-                  <div class="demo-account">
-                    <strong>Email:</strong> test@depod.az<br />
-                    <strong>Parol:</strong> test123<br />
-                    <small>(Gözləyən tələbə statusu)</small>
-                  </div>
-                </div>
-              </div>
-
               <button
                 type="submit"
                 class="btn btn-primary auth-btn"
@@ -198,46 +176,67 @@
               <span class="footer-logo-text" translate="no">DEPOD</span>
             </div>
             <p class="footer-description">
-              Keyfiyyətli texnologiya məhsulları ilə həyatınızı asanlaşdırın.
+              Keyfiyyətli texnoloji məhsullar istehsalçısı. Yenilikçi həllər və
+              etibarlı məhsullarla sizin xidmətinizdəyik.
             </p>
+            <div class="social-icons">
+              <a
+                href="https://instagram.com/depod"
+                target="_blank"
+                rel="noopener"
+              >
+                <i class="fab fa-instagram"></i>
+              </a>
+              <a
+                href="https://www.tiktok.com/@depod"
+                target="_blank"
+                rel="noopener"
+              >
+                <i class="fab fa-tiktok"></i>
+              </a>
+              <a
+                href="https://facebook.com/depod"
+                target="_blank"
+                rel="noopener"
+              >
+                <i class="fab fa-facebook-f"></i>
+              </a>
+            </div>
           </div>
 
           <div class="footer-section">
-            <h3 class="footer-section-title">Sürətli Linklər</h3>
+            <h4 class="footer-title">Məhsullar</h4>
             <ul class="footer-links">
-              <li><a href="index.html">Ana Səhifə</a></li>
-              <li><a href="products.html">Məhsullar</a></li>
+              <li><a href="products.html?category=powerbank">Powerbank</a></li>
+              <li><a href="products.html?category=earphone">Qulaqlıqlar</a></li>
+              <li>
+                <a href="products.html?category=car-charger">Avtomobil Şarjı</a>
+              </li>
+            </ul>
+          </div>
+
+          <div class="footer-section">
+            <h4 class="footer-title">Şirkət</h4>
+            <ul class="footer-links">
               <li><a href="about.html">Haqqımızda</a></li>
               <li><a href="contact.html">Əlaqə</a></li>
             </ul>
           </div>
 
           <div class="footer-section">
-            <h3 class="footer-section-title">Məhsullar</h3>
-            <ul class="footer-links">
-              <li><a href="products.html?category=powerbank">Powerbank</a></li>
-              <li><a href="products.html?category=earphone">Qulaqlıqlar</a></li>
-              <li>
-                <a href="products.html?category=charger">Şarj Cihazları</a>
-              </li>
-              <li>
-                <a href="products.html?category=car-charger">Avtomobil Şarj</a>
-              </li>
-            </ul>
-          </div>
-
-          <div class="footer-section">
-            <h3 class="footer-section-title">Əlaqə</h3>
-            <ul class="footer-contact">
-              <li><i class="fas fa-phone"></i> +994 50 123 45 67</li>
-              <li><i class="fas fa-envelope"></i> info@depod.az</li>
-              <li><i class="fas fa-map-marker-alt"></i> Bakı, Azərbaycan</li>
-            </ul>
+            <h4 class="footer-title">Əlaqə</h4>
+            <div class="footer-contact">
+              <p>info@depod.az</p>
+              <p>+994 77 333 41 42</p>
+            </div>
           </div>
         </div>
 
         <div class="footer-bottom">
-          <p>&copy; 2024 Depod. Bütün hüquqlar qorunur.</p>
+          <p>
+            &copy; 2025 Depod. Bütün hüquqlar qorunur.
+            <a href="https://nurkhanmasimzada.site">Developed by Masimzada</a>
+          </p>
         </div>
       </div>
     </footer>
@@ -245,6 +244,7 @@
     <!-- Scripts -->
     <script src="js/api.js"></script>
     <script src="js/main.js"></script>
+    <script src="js/footer.js"></script>
     <script src="js/login.js"></script>
   </body>
 </html>
