--- a/register.html
+++ b/register.html
@@ -262,46 +262,67 @@
               <span class="footer-logo-text" translate="no">DEPOD</span>
             </div>
             <p class="footer-description">
-              Keyfiyyətli texnologiya məhsulları ilə həyatınızı asanlaşdırın.
+              Keyfiyyətli texnoloji məhsullar istehsalçısı. Yenilikçi həllər və
+              etibarlı məhsullarla sizin xidmətinizdəyik.
             </p>
+            <div class="social-icons">
+              <a
+                href="https://instagram.com/depod"
+                target="_blank"
+                rel="noopener"
+              >
+                <i class="fab fa-instagram"></i>
+              </a>
+              <a
+                href="https://www.tiktok.com/@depod"
+                target="_blank"
+                rel="noopener"
+              >
+                <i class="fab fa-tiktok"></i>
+              </a>
+              <a
+                href="https://facebook.com/depod"
+                target="_blank"
+                rel="noopener"
+              >
+                <i class="fab fa-facebook-f"></i>
+              </a>
+            </div>
           </div>
 
           <div class="footer-section">
-            <h3 class="footer-section-title">Sürətli Linklər</h3>
+            <h4 class="footer-title">Məhsullar</h4>
             <ul class="footer-links">
-              <li><a href="index.html">Ana Səhifə</a></li>
-              <li><a href="products.html">Məhsullar</a></li>
+              <li><a href="products.html?category=powerbank">Powerbank</a></li>
+              <li><a href="products.html?category=earphone">Qulaqlıqlar</a></li>
+              <li>
+                <a href="products.html?category=car-charger">Avtomobil Şarjı</a>
+              </li>
+            </ul>
+          </div>
+
+          <div class="footer-section">
+            <h4 class="footer-title">Şirkət</h4>
+            <ul class="footer-links">
               <li><a href="about.html">Haqqımızda</a></li>
               <li><a href="contact.html">Əlaqə</a></li>
             </ul>
           </div>
 
           <div class="footer-section">
-            <h3 class="footer-section-title">Məhsullar</h3>
-            <ul class="footer-links">
-              <li><a href="products.html?category=powerbank">Powerbank</a></li>
-              <li><a href="products.html?category=earphone">Qulaqlıqlar</a></li>
-              <li>
-                <a href="products.html?category=charger">Şarj Cihazları</a>
-              </li>
-              <li>
-                <a href="products.html?category=car-charger">Avtomobil Şarj</a>
-              </li>
-            </ul>
-          </div>
-
-          <div class="footer-section">
-            <h3 class="footer-section-title">Əlaqə</h3>
-            <ul class="footer-contact">
-              <li><i class="fas fa-phone"></i> +994 50 123 45 67</li>
-              <li><i class="fas fa-envelope"></i> info@depod.az</li>
-              <li><i class="fas fa-map-marker-alt"></i> Bakı, Azərbaycan</li>
-            </ul>
+            <h4 class="footer-title">Əlaqə</h4>
+            <div class="footer-contact">
+              <p>info@depod.az</p>
+              <p>+994 77 333 41 42</p>
+            </div>
           </div>
         </div>
 
         <div class="footer-bottom">
-          <p>&copy; 2024 Depod. Bütün hüquqlar qorunur.</p>
+          <p>
+            &copy; 2025 Depod. Bütün hüquqlar qorunur.
+            <a href="https://nurkhanmasimzada.site">Developed by Masimzada</a>
+          </p>
         </div>
       </div>
     </footer>
@@ -309,6 +330,7 @@
     <!-- Scripts -->
     <script src="js/api.js"></script>
     <script src="js/main.js"></script>
+    <script src="js/footer.js"></script>
     <script src="js/register.js"></script>
   </body>
 </html>
