Update password validation to require a minimum of 8 characters across login, registration, and profile pages; remove obsolete service worker file.

--- a/login.html
+++ b/login.html
@@ -118,6 +118,7 @@
                     id="password"
                     name="password"
                     required
+                    minlength="8"
                     placeholder="Parolunuzu daxil edin"
                   />
                   <button
