Implement code changes to enhance functionality and improve performance

--- a/register.html
+++ b/register.html
@@ -219,7 +219,7 @@
                   <span class="checkmark"></span>
                   <span class="checkbox-text">
                     <a
-                      href="#"
+                      href="javascript:void(0)"
                       id="termsLink"
                       class="terms-link"
                       target="_blank"
@@ -228,7 +228,7 @@
                     >
                     və
                     <a
-                      href="#"
+                      href="javascript:void(0)"
                       id="privacyLink"
                       class="terms-link"
                       target="_blank"
