all done except payment method

--- a/product-detail.html
+++ b/product-detail.html
@@ -185,12 +185,14 @@
               </div>
 
               <div class="product-actions">
+                <h4>Topdan alış üçün təklif göndərin:</h4>
                 <button class="btn-add-to-cart" id="offerBtn">
                   Təklif göndər
                 </button>
+                <h4>Mağzadan bir başa əldə edin:</h4>
                 <button
                   class="btn-buy-now"
-                  onclick="window.location.href='https://www.google.com/maps/search/armoodstore/@40.3793387,49.8453584,11z?entry=s&sa=X&ved=1t%3A199789'"
+                  onclick="window.location.href='https://maps.app.goo.gl/MmTmXYDrMschaUCQ8'"
                 >
                   Mağazanı Tap
                 </button>
